fix: responsiveness on mobile web adding bodyPosition: relative

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@ body {
   max-width: 100%;
   overflow-x: hidden;
 }
+
+body {
+  position: relative;
+}
